--- a/프론트엔드/JavaScript/examples.html
+++ b/프론트엔드/JavaScript/examples.html
@@ -1659,7 +1659,7 @@ Header
 
 </script> -->
 
-<h1>Drag and Drop</h1>
+<!-- <h1>Drag and Drop</h1>
 
 <style>
     #drop-zone{
@@ -1712,7 +1712,11 @@ Header
         console.log('드래그 중입니다.')
     }
 
-</script>
+</script> -->
+
+<!-- 23.04.14 -->
+
+<h1>toggle dark mode</h1>
 
 
 
